[package]
name = "galactic-gambit-leaderboard"
version = "0.1.0"
authors = ["Jan Duinkerken Rodriguez <jan.duinkerken.rodriguez@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rusqlite = "0.29.0"
actix-web = "4"
