[package]
name = "galactic_gambit_leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
